Resolved alignment of Desktop dropdown menu.

--- a/src/components/DropdownMenu/desktopDropdownMenu.css
+++ b/src/components/DropdownMenu/desktopDropdownMenu.css
@@ -1,11 +1,14 @@
+@media(min-width: 800px) {
+
   .mainDesktopDropdownMenu {
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    min-width: 100vw;
     height: 250px;
-    margin: 0 auto;
+    /*margin-left: -0%;*/
+    margin-left: 38%;
     background-color: white;
     top: 100%;
     left: -51.5%;
@@ -13,10 +16,12 @@
   }
 
   .desktopDropdownLinksContainer {
-    width: 60%;
+    /*width: 60%;*/
+    width: 100%;
+
     height: 80%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 1em 6em;
   }
 
@@ -45,3 +50,29 @@
     color: #a9a9a9;
 
   }
+
+}
+
+@media(min-width: 1000px) {
+  .mainDesktopDropdownMenu {
+    margin-left: 38%;
+    left: -51.5%;
+  }
+
+  .desktopDropdownLinksContainer {
+    width: 70%;
+    justify-content: space-between;
+  }
+}
+
+@media(min-width: 1400px) {
+  .mainDesktopDropdownMenu {
+    margin-left: 0;
+    left: -51.5%;
+  }
+
+  .desktopDropdownLinksContainer {
+    width: 60%;
+    justify-content: space-between;
+  }
+}
